# twat-text

./: CLEANUP.txt  GITHUB_WORKFLOWS.md  LOG.md  README.md  REFACTOR_FILELIST.txt  REPO_CONTENT.txt  VERSION.txt  WORK.md  pyproject.toml
.cursor/rules/: filetree.mdc
.github/workflows/: push.yml  release.yml
scripts/: build.py
src/: twat_text.py
src/twat_text/: __init__.py  twat_text.py
tests/: test_package.py  test_twat_text.py
